# pos-retail-saas

./: Cargo.toml  README.md
src/: bootstrap.rs  lib.rs  main.rs
src/api/handler/: health.rs
src/api/response/: api_response.rs  mod.rs
src/config/: mod.rs  settings.rs
src/error/: app_error.rs
src/middleware/: request_id.rs  trace.rs
src/router/: mod.rs
src/state/: mod.rs
src/telemetry/: mod.rs
