[package]
name = "pos-retail-saas"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

authors = ["din"]
license = "MIT"
publish = false

[dependencies]
time = "=0.3.45"

# Async Runtime
tokio = { version = "1.53.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }

# HTTP
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }

# Serialization
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

# Configuration
config = "0.15.25"
dotenvy = "0.15.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Error Handling
thiserror = "2.0.19"
anyhow = "1.0.104"

# UUID
uuid = { version = "1.24.0", features = ["v7", "serde"] }

# Time
chrono = { version = "0.4.45", features = ["serde"] }

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "macros",
] }

# Redis
redis = { version = "1.2.2", features = ["tokio-comp"] }

# Authentication
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"

# Utilities
async-trait = "0.1.91"

[dev-dependencies]
tokio = { version = "1.53.1", features = ["full"] }
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
serde_json = "1.0.151"
tempfile = "3.27.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
